--- a/app/src/main/res/layout/fragment_contestants_list.xml
+++ b/app/src/main/res/layout/fragment_contestants_list.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContestantsListFragment">
+    tools:context=".ContestantsListFragment"
+    android:orientation="vertical">
+
     <LinearLayout
         android:gravity="center_horizontal"
         android:layout_marginBottom="10dp"
         android:id="@+id/post_type"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="match_parent"
+        android:layout_weight="9"
         android:orientation="horizontal">
         <RadioGroup
+            android:visibility="visible"
             android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,12 +56,13 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_weight="1"
         android:id="@+id/contestants_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/post_type"
          />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
