--- a/app/src/main/res/layout/activity_fingerprint.xml
+++ b/app/src/main/res/layout/activity_fingerprint.xml
@@ -32,6 +32,7 @@
         android:layout_below="@+id/fingerprintImage"
         android:layout_centerHorizontal="true"
         android:padding="20dp"
+        android:textSize="28sp"
         android:text="Place your Finger on the Scanner to Proceed"
         android:textAlignment="center"
         android:gravity="center_horizontal" />
