--- a/app/src/main/res/layout/result_view.xml
+++ b/app/src/main/res/layout/result_view.xml
@@ -18,7 +18,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="5">
+                android:layout_weight="4">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profile_image"
@@ -33,7 +33,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
+                android:layout_weight="4"
                 android:padding="5dp"
                 android:orientation="vertical">
 
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="JOHNSON NYAANGA"
-                    android:textSize="18sp" />
+                    android:textSize="15sp" />
 
                 <TextView
                     android:textStyle="bold"
@@ -54,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="Chairman"
-                    android:textSize="15sp" />
+                    android:textSize="13sp" />
 
 
 
@@ -64,14 +64,24 @@
                 android:layout_width="match_parent"
                 android:layout_marginLeft="20dp"
                 android:layout_height="match_parent"
-                android:layout_weight="5">
+                android:layout_weight="4">
                 <TextView
                     android:gravity="center"
                     android:id="@+id/no_ofVotes"
                     android:textStyle="bold"
-                    android:textSize="35sp"
+                    android:textSize="25sp"
                     android:text="50"
                     android:textColor="#07AC0E"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    android:layout_marginStart="10dp"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    android:text="votes"
+                    android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
